--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
-
 {
   "version": 2,
   "builds": [
     {
-      "src": "api/safety.js",
+      "src": "api/*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/safety",
-      "dest": "api/safety.js"
+      "src": "/api/(.*)",
+      "dest": "api/$1.js"
     }
   ]
 }
